# mdtool

./: .gitignore  Makefile  README.md  go.mod  go.sum  pyproject.toml  test.md
cmd/mdtool/: main.go  preview.go
internal/config/: config.go
internal/groq/: service.go
internal/parser/: parser.go
internal/readme/: generator.go
internal/render/: render.go
mdtool/: cli.py  config.py  groq_service.py  readme.py
